--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         <h1 class="title2">History</h1>
         <div class="line"></div>
       </div>
-      <div id="histories"></div>
+      <div id="histories">
+        <!-- Every single stories will goes here... -->
+      </div>
     </div>
 
     <div id="countdown"></div>
