--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <!-- Navigation menu -->
+    <a href="blog.html" class="menu">Blog</a>
+    <!-- Website Logo -->
     <h1 class="title"><img src="./logo.png" /></h1>
     <div id="show-time">0 seconds</div>
 
